feat: modified migrations users and add middleware routes
