# routes/api.php
@@ -4,6 +4,9 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\MedicalSpecialtiesController;
+use App\Http\Controllers\Api\SpecialtiesController;
+
 
 /*
 |--------------------------------------------------------------------------
@@ -22,22 +25,37 @@ use App\Http\Controllers\Api\AuthController;
 
 
 
-Route::middleware(['jwt.admin'])->group(function () {
+Route::middleware(['jwt.admin.and.user'])->group(function () {
     Route::get('/', function (){
         return response()->json(['api_name' => 'laravel-app', 'api_version' => '1.0.0']);
     });
+    // ============== User ===============//
+    Route::post('refresh', [AuthController::class, 'refresh']);
+    Route::post('logout', [AuthController::class, 'logout']);
+    // ====================================== //
+
+    Route::get('/user', [UserController::class, 'index']);
+    Route::get('/user/show/{id}', [UserController::class, 'show']);
+    Route::put('/user/update/{id}', [UserController::class, 'update']);
+    Route::delete('/user/destroy/{id}', [UserController::class, 'destroy']);
+
 });
 
 Route::controller(AuthController::class)->group(function () {
     Route::post('login', 'login');
     Route::post('register', 'register');
-    Route::post('logout', 'logout');
-    Route::post('refresh', 'refresh');
+    
 });
 
-Route::controller(UserController::class)->group(function () {
-    Route::get('/user', 'index');
-    Route::get('/user/show/{id}', 'show');
-    Route::put('/user/update/{id}', 'update');
-    Route::delete('/user/destroy/{id}', 'destroy');
-});
+Route::controller(SpecialtiesController::class)->group(function () {
+    Route::get('/specialties', 'index');
+    Route::get('/specialties/{id}', 'show');
+    Route::post('/specialties/create', 'store');
+    Route::put('/specialties/update/{id}', 'update');
+    Route::delete('/specialties/destroy/{id}', 'destroy');
+})->middleware('auth:api', 'jwt.admin');
+
+Route::controller(MedicalSpecialtiesController::class)->group(function (){
+    Route::post('/medicalspecialties/create', 'store');
+})->middleware('auth:api', 'jwt.admin');
+
